--- a/WeatherView/MainWindow.xaml
+++ b/WeatherView/MainWindow.xaml
@@ -21,17 +21,17 @@
         <Border Grid.Row="1" Grid.ColumnSpan="2" Background="#152951"/>
 
         <StackPanel Grid.Column="1" Margin="40,0,0,0" VerticalAlignment="Center">
-            <TextBlock Foreground="White" FontSize="25" Text="Today - 64° F"/>
-            <TextBlock Foreground="White" FontSize="25" Text="Partially Cloudy"/>
-            <TextBlock Foreground="White" FontSize="25" Text="Precipitation: 25%"/>
+            <TextBlock x:Name="TB_Currently" Foreground="White" FontSize="25" Text="Today - 64° F"/>
+            <TextBlock x:Name="TB_WeatherState" Foreground="White" FontSize="25" Text="Partially Cloudy"/>
+            <TextBlock x:Name="TB_Humidity" Foreground="White" FontSize="25" Text="Precipitation: 25%"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal"
             HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Foreground="White" FontSize="25" Text="High: 66°" Margin="0,0,20,0"/>
-            <TextBlock Foreground="White" FontSize="25" Text="Low: 43°" Margin="0,0,20,0"/>
-            <TextBlock Foreground="White" FontSize="25" Text="Feels like: 63°"/>
+            <TextBlock x:Name="TB_High" Foreground="White" FontSize="25" Text="High: 66°" Margin="0,0,20,0"/>
+            <TextBlock x:Name="TB_Low" Foreground="White" FontSize="25" Text="Low: 43°" Margin="0,0,20,0"/>
+            <TextBlock x:Name="TB_Feels" Foreground="White" FontSize="25" Text="Feels like: 63°"/>
         </StackPanel>
 
-        <Image Margin="20" Source="Assets/image.png"/>
+        <Image x:Name="image" Margin="20" Source="Assets/image.png"/>
     </Grid>
 </Window>
