--- a/WeatherView/MainWindow.xaml
+++ b/WeatherView/MainWindow.xaml
@@ -5,33 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeatherView"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="500" Width="400">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="5*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        <Grid.Background>
+            <ImageBrush ImageSource="\Assets\Background.jpg"></ImageBrush>
+            </Grid.Background>
         
-        <Border Background="#2f5cb6"/>
-        <Border Grid.Column ="1" Background="#1f3d7a"/>
-        <Border Grid.Row="1" Grid.ColumnSpan="2" Background="#152951"/>
-
-        <StackPanel Grid.Column="1" Margin="40,0,0,0" VerticalAlignment="Center">
-            <TextBlock x:Name="TB_Currently" Foreground="White" FontSize="25" Text="Today - 64° F"/>
-            <TextBlock x:Name="TB_WeatherState" Foreground="White" FontSize="25" Text="Partially Cloudy"/>
-            <TextBlock x:Name="TB_Humidity" Foreground="White" FontSize="25" Text="Precipitation: 25%"/>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal"
-            HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock x:Name="TB_High" Foreground="White" FontSize="25" Text="High: 66°" Margin="0,0,20,0"/>
-            <TextBlock x:Name="TB_Low" Foreground="White" FontSize="25" Text="Low: 43°" Margin="0,0,20,0"/>
-            <TextBlock x:Name="TB_Feels" Foreground="White" FontSize="25" Text="Feels like: 63°"/>
-        </StackPanel>
-
-        <Image x:Name="image" Margin="20" Source="Assets/image.png"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="76*"/>
+            <RowDefinition Height="66*"/>
+            <RowDefinition Height="61*"/>
+            <RowDefinition Height="77*"/>
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="101*"/>
+        </Grid.RowDefinitions>
+        <ComboBox x:Name="ComboBox_Cities" Grid.Row="0" HorizontalAlignment="Left" Margin="35,10,0,0" VerticalAlignment="Top" Width="120" Height="22"/>
+        <Label x:Name="Label_Time" Grid.Row="0" Content="02:30" HorizontalAlignment="Left" Margin="287,0,0,0" VerticalAlignment="Top" Width="103" Height="26"/>
+        <Label x:Name="Label_Date" Grid.Row="0" Content="14 DEC 2019" HorizontalAlignment="Left" Margin="287,20,0,0" VerticalAlignment="Top" Width="103" Height="26"/>
+        <Label x:Name="Label_Day" Grid.Row="0" Content="Saturday" HorizontalAlignment="Left" Margin="287,40,0,0" VerticalAlignment="Top" Width="103" Height="26"/>
+         
+           
     </Grid>
 </Window>
