--- a/WeatherView/MainWindow.xaml
+++ b/WeatherView/MainWindow.xaml
@@ -34,7 +34,7 @@
             <RowDefinition Height="101*"/>
         </Grid.RowDefinitions>
 
-        <ComboBox x:Name="ComboBox_Cities" HorizontalAlignment="Left" Margin="12,9,0,0" VerticalAlignment="Top" Width="120" Height="22" Grid.ColumnSpan="2" Opacity="0.3">
+        <ComboBox x:Name="ComboBox_Cities" HorizontalAlignment="Left" Margin="12,9,0,0" VerticalAlignment="Top" Width="120" Height="22" Grid.ColumnSpan="2" Opacity="0.3" SelectionChanged="ComboBox_Cities_SelectionChanged">
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1">
                     <GradientStop Color="#FFF0F0F0"/>
@@ -42,17 +42,21 @@
                 </LinearGradientBrush>
             </ComboBox.Background>
         </ComboBox>
-        <TextBlock x:Name="TB_Time" Text="02:30" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,11,0,0" VerticalAlignment="Top" Width="104" Height="40" Grid.Column="2" FontSize="30"/>
-        <TextBlock x:Name="TB_Date" Grid.Row="0" Text="14 DEC 2019" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,46,0,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="2" FontSize="17"/>
-        <TextBlock x:Name="TB_Day" Grid.Row="0" Text="Saturday" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="2" FontSize="20" Grid.RowSpan="2"/>
+        <TextBlock x:Name="TB_Date" Grid.Row="0" Text="" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,46,0,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="2" FontSize="17"/>
+        <TextBlock x:Name="TB_Day" Grid.Row="0" Text="" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="2" FontSize="20" Grid.RowSpan="2"/>
         <TextBlock x:Name="TB_City" Grid.Row="1" Text="Annecy" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontSize="40" Grid.Column="1"/>
-        <TextBlock x:Name="TB_WeatherState" Grid.RowSpan="3" Text="Sunny" HorizontalAlignment="Center" Margin="0,150,0,0" VerticalAlignment="Top" FontSize="18" Grid.ColumnSpan="3"/>
+        <TextBox x:Name="TB_Name" Text="Daniel Da Silva Gomes" Foreground="White" BorderBrush="Transparent" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Grid.ColumnSpan="3" Margin="98,67,0,0" SelectionOpacity="1" Grid.RowSpan="2" GotFocus="TB_Name_GotFocus" LostFocus="TB_Name_LostFocus"/>
 
-        <TextBlock x:Name="TB_Temperature" Grid.RowSpan="2" Text="25" Margin="0,60,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="40" Grid.Row="1"/>
+        <TextBlock x:Name="TB_WeatherState" Grid.RowSpan="3" Text="" HorizontalAlignment="Center" Margin="0,150,0,0" VerticalAlignment="Top" FontSize="18" Grid.ColumnSpan="3"/>
+        <Button x:Name="FavoriteButton" Grid.Row="1" Grid.ColumnSpan="3" Margin="144,0,8,45" Background="Transparent" BorderBrush="Transparent" Width="35" Height="35" Click="FavoriteButton_Click" >
+            <Image x:Name="FavoriteImage" Source="Assets\Favorited.png"/>
+        </Button>
+        <TextBlock x:Name="TB_Temperature" Grid.RowSpan="2" Text="" Margin="0,60,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="40" Grid.Row="1"/>
         <TextBlock x:Name="TB_Celsius" Grid.Row="1" Grid.ColumnSpan="1" Text="°C" Margin="71,66,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Grid.RowSpan="2"/>
 
-        <TextBlock x:Name="TB_MaxTemperature" Grid.Row="1" Grid.Column="0" Text="30°C" Margin="30,-25,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
-        <TextBlock x:Name="TB_MinTemperature" Grid.Row="1" Grid.Column="0" Text="20°C" Margin="30,25,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
+
+        <TextBlock x:Name="TB_MaxTemperature" Grid.Row="1" Grid.Column="0" Text="" Margin="30,-25,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
+        <TextBlock x:Name="TB_MinTemperature" Grid.Row="1" Grid.Column="0" Text="" Margin="30,25,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
         <Image x:Name="WeatherImage" Grid.Row="1" Grid.Column="2"/>
 
         <Image x:Name="Image_MaxTemp" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,-25,0,0" Source="\Assets\MaxTempArrow.png" Height="20" Width="20"/>
@@ -77,29 +81,22 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Border Grid.ColumnSpan="2" Grid.RowSpan="2" CornerRadius="20" BorderThickness="2" Opacity="0.4" BorderBrush="White"/>
-            <TextBlock x:Name="TB_WindSpeed" Text="20 km/h" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="70,0,0,0"/>
-            <TextBlock x:Name="TB_Humidity" Text="80%" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="84,0,0,0"/>
-            <Border Grid.ColumnSpan="2" Grid.Row="1" Opacity="0.4" BorderThickness="2" CornerRadius="0,0,20,20" BorderBrush="White"/>
+            <TextBlock x:Name="TB_WindSpeed" Text="" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="70,0,0,0"/>
+            <TextBlock x:Name="TB_Humidity" Text="" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="82,0,0,0"/>
+            <TextBlock x:Name="TB_Sunrise" Text="" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="82,0,0,0"/>
+            <TextBlock x:Name="TB_Sunset" Text="" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="81,0,0,0"/>
 
-            <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-                <WrapPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2">
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
 
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
-                    <Image Width="80" Height="80" Source="Assets\image.png" Margin="5"/>
 
-                </WrapPanel>
-            </ScrollViewer>
             <TextBlock x:Name="TB_WindSpeedText" Text="Wind Speed" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="25" Margin="19,0,0,4"/>
-            <Image x:Name="WindImage" Source="\Assets\WindIcon.png" Grid.Column="1" Height="83" Width="65" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,0,0,0"/>
-            <TextBlock x:Name="TB_HumidityText" Text="Humidity" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="25" Margin="38,0,0,3"/>
-            <Image x:Name="HumidityImage" Source="\Assets\HumidityImage.png" Height="77" Width="73" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,15,0,0"/>
+            <Image x:Name="WindImage" Source="\Assets\WindIcon.png" Grid.Column="1" Height="83" Width="65" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,0,0,0"/>
+            <Image x:Name="HumidityImage" Source="\Assets\HumidityImage.png" Height="77" Width="73" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="9,15,0,0"/>
+            <TextBlock x:Name="TB_HumidityText" Text="Humidity" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="25" Margin="37,0,0,3"/>
+            <Image x:Name="SunriseImage" Source="\Assets\Sunrise.png" Height="77" Width="73" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="9,0,0,0" Grid.Row="1"/>
+            <TextBlock x:Name="TB_SunRiseText" Text="Sunrise" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="25" Margin="0,75,0,0" Grid.Row="1"/>
+
+            <Image x:Name="SunsetImage" Source="\Assets\Sunset.png" Height="59" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" Grid.Row="1" Grid.Column="1"/>
+            <TextBlock x:Name="TB_SunSetText" Text="Sunset" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="25" Margin="0,75,0,0" Grid.Row="1" Grid.Column="1"/>
 
 
         </Grid>
@@ -115,14 +112,17 @@
             </Grid.ColumnDefinitions>
             <Border Grid.ColumnSpan="3" CornerRadius="20" BorderThickness="2" Opacity="0.4" BorderBrush="White"/>
             <Image x:Name="WeatherDay1" Grid.Column="0" Grid.Row="0" Margin="9,7,8,31"/>
-            <TextBlock x:Name="TB_Day1MinMax" Text="°C / °C" Grid.Column="0" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10"/>
+            <TextBlock x:Name="TB_Day1MinMax" Text="" Grid.Column="0" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10" FontSize="18"/>
             <Image x:Name="WeatherDay2" Grid.Column="1" Grid.Row="0" Margin="9,7,8,31"/>
-            <TextBlock x:Name="TB_Day2MinMax" Text="°C / °C" Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10"/>
+            <TextBlock x:Name="TB_Day2MinMax" Text="" Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10" FontSize="18"/>
             <Image x:Name="WeatherDay3" Grid.Column="2" Grid.Row="0" Margin="9,7,8,31"/>
-            <TextBlock x:Name="TB_Day3MinMax" Text="°C / °C" Grid.Column="2" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10"/>
+            <TextBlock x:Name="TB_Day3MinMax" Text="" Grid.Column="2" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5,0,0,10" FontSize="18"/>
         </Grid>
-        <TextBox x:Name="SearchBox" Grid.Column="1" HorizontalAlignment="Center" Margin="10,-50,0,0" TextWrapping="Wrap" Text="Search..." Opacity="1" VerticalAlignment="Center" Width="120" Height="21"/>
-
+        <Border Grid.ColumnSpan="2" Grid.Row="0" CornerRadius="10" Background="White" BorderThickness="0" Opacity="0.4" BorderBrush="White" Margin="42,11,109,61" Grid.Column="1"/>
+        <TextBox x:Name="SearchBox" Grid.ColumnSpan="3" BorderBrush="Transparent" Background="Transparent" HorizontalAlignment="Center" Margin="50,-50,0,0" TextWrapping="Wrap" Text="Search..." VerticalAlignment="Center" Width="120" Height="21" GotFocus="SearchBox_GotFocus"/>
+        <Button x:Name="SearchButton" Grid.Column="1" HorizontalAlignment="Center" Margin="-80,-50,0,0" VerticalAlignment="Center" Width="21" Height="21" Click="SearchButton_Click" BorderThickness="0" Background="Transparent">
+            <Image Source="\Assets\SearchIcon.png" Height="21" Width="21"/>
+        </Button>
     </Grid>
 
 </Window>
